--- a/engine/Pipfile
+++ b/engine/Pipfile
@@ -6,12 +6,15 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
+matplotlib = "*"
 keras = "*"
 numpy = "*"
-pandas = "*"
-cv2 = "*"
-matplotlib = "*"
 opencv-python = "*"
+tensorflow = "*"
+image = "*"
+pillow = "*"
+imutils = "*"
+scikit-learn = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.6"
